Put text provided by Dr. E.
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1979 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/TransAtlanticSlaveTrade/etc/redirect/static.html
+++ b/src/TransAtlanticSlaveTrade/etc/redirect/static.html
@@ -36,10 +36,9 @@ td.top-bar-logo img {
 <table align="center" border="1" cellspacing="0" cellpadding="2">
 <tr>
 <td>
-Slavevoyages.org is not available at this time due to system maintenance.
+Slavevoyages.org is not available at this time because of essential maintenance operations.
 <br> 
-Bla Bla Bla. 
-<br>
+We apologize and ask you to return to the site later. 
 <br>
 Thank you for your patience.
 </td>
